@@ -37,6 +37,7 @@ Changelog
  * Fix: Non-text content is now preserved when adding or editing a link within rich text (Matt Westcott)
  * Fix: Fixed preview when `SECURE_SSL_REDIRECT = True` (Aymeric Augustin)
  * Fix: Prevent hang when truncating an image filename without an extension (Ricky Robinett)
+ * Deprecated ``AbstractForm`` in favor of mixin class ``FormPageMixin``.
 
 
 1.6.3 (30.09.2016)
